[tool.poetry]
name = "entsoe-client"
version = "0.1.0"
description = "Interface to ENTSO-E API."
authors = ["Dario Hett <dariohett@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.1"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
arrow = "^1.1.1"
python-dateutil = "^2.8.2"
pytz = "^2021.1"
lxml = "^4.6.3"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
