[tool.poetry]
name = "entsoe-client"
version = "0.1.4"
description = "Formulate human-readable queries and retrieve data from ENTSO-E into pandas.DataFrame format."
readme="README.rst"
license="MIT"
authors = ["Dario Hett <dariohett@gmail.com>"]
homepage = "https://github.com/DarioHett/entsoe-client"
repository = "https://github.com/DarioHett/entsoe-client"
keywords = ["entsoe", "entso-e", "power", "electricity", "europe", "tso", "transparency platform"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.1"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
arrow = "^1.1.1"
python-dateutil = "^2.8.2"
pytz = "^2021.1"
lxml = "^4.6.3"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
